@@ -1,3 +1,7 @@
+2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* squeeze/Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
+
 2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* m4/xdvi-xinput-2-1.m4: Change the default to disable 'smooth
