@@ -1,3 +1,7 @@
+2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* {,squeeze/}Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
+
 2014-04-17  Karl Berry  <karl@tug.org>
 
 	* version 5.994 for TL'14.
